# bashello

./: CMakeLists.txt  README.md  README.txt  scriptik.msh
inc/: buf_containers.hpp  builtins.hpp  command.hpp  custom_environ.hpp  execution.hpp  myfile.hpp  parse_utils.hpp  wildcards.hpp
src/: buf_containers.cpp  builtins.cpp  command.cpp  custom_environ.cpp  execution.cpp  main.cpp  mycat.cpp  myfile.cpp  myls.cpp  parse_utils.cpp  wildcards.cpp
